--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0",
-    "truffle": "5.0.0-beta.0"
+    "truffle": "^5.3.0"
+  },
+  "resolutions": {
+    "**/**/node-gyp": "5.0.0"
   }
 }
