--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
   "license": "ISC",
   "devDependencies": {
     "lite-server": "^2.3.0",
-    "truffle": "^5.3.0"
+    "truffle": "^5.3.0",
+    "chai": "4.2.0",
+    "chai-as-promised": "7.1.1",
+    "chai-bignumber": "3.0.0",
+    "web3": "1.0.0-beta.55"
   },
   "resolutions": {
     "**/**/node-gyp": "5.0.0"
